navbar alignment fixes

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
 .NavbarItems {
   background-color: #8f001a;
-  height: 100px;
+  height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: 1.5rem;
 }
@@ -22,24 +22,18 @@
 }
 
 .nav-menu {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  grid-gap: 10px;
-  list-style: none;
   text-align: center;
-  width: 70vw;
   justify-content: end;
+  align-items: center;
+  display: flex;
   margin-right: 2rem;
 }
 
 .nav-links {
-  position: relative;
-  top: 10px;
   color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
   font-size: 2vw;
-  width: 20px;
 }
 
 .nav-links:hover {
@@ -55,8 +49,7 @@
   border-radius: 30px;
   margin-left: 10px;
   position: relative;
-  right: -250px;
-  top: 10px;
+  cursor: pointer;
 }
 .nav-pic:hover {
   background-color: grey;
@@ -74,41 +67,9 @@
   top: 0px;
 }
 
-.profilevist {
-  font-family: "Montserrat", sans-serif;
-  z-index: 1;
-  text-align: center;
-  font-size: 1rem;
-  position: absolute;
-  right: 50px;
-  top: 80px;
-  width: 250px;
-  height: 200px;
-  border-radius: 3px;
-  color: #181818;
-  background: white;
-}
-
-.profilevist h2 {
-  color: #181818;
-  text-align: center;
-  margin-top: 10px;
-  font-size: 1.5rem;
-}
-
-.profilevist a {
-  color: #181818;
-  text-align: center;
-  font-size: 1.5rem;
-}
-
 .pbut {
   position: relative;
   bottom: -30px;
-}
-
-.profilevistf {
-  display: none;
 }
 
 .profilepic {
@@ -139,31 +100,72 @@
   display: none;
 }
 
-@media screen and (max-width: 960px) {
+.profilevist > * {
+  margin: 5px 0px;
+}
+
+@media screen and (orientation: landscape) {
+  .profilevist {
+    font-family: "Montserrat", sans-serif;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 20px;
+    z-index: 1;
+    text-align: center;
+    font-size: 1rem;
+    position: absolute;
+    right: 10px;
+    top: 90px;
+    border-radius: 3px;
+    color: #181818;
+    background: white;
+    transition: all 0.3s;
+  }
+
+  .profilevist h2 {
+    color: #181818;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 10px;
+  }
+
+  .profilevist-closed {
+    right: 0;
+    opacity: 0;
+    pointer-events: none;
+    transition: none;
+  }
+}
+
+@media screen and (orientation: portrait) {
   .NavbarItems {
     position: relative;
   }
   .nav-menu {
+    background: #181818;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 500px;
+    width: calc(100% + 20px);
     position: absolute;
     top: 80px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav-pic{
+    left: -20px;
     opacity: 0;
+    padding: 20px 0;
   }
 
-  .nav-menu.active{
-    background: #181818;
+  .nav-menu > a,
+  .nav-menu > button {
+    margin: 5px 0;
+  }
+
+  .nav-pic {
+    display: none;
+  }
+
+  .nav-menu.active {
     left: 0;
     opacity: 1;
-    transition: all 0.5s ease;
+    transition: all 0.3s;
     z-index: 1;
   }
 
@@ -186,19 +188,10 @@
     width: 100%;
     display: table;
   }
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(25%, 50%);
-  }
 
   .menu-icon {
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
+    display: inline-flex;
+    margin-right: 20px;
     font-size: 1.8rem;
     cursor: pointer;
   }
@@ -225,5 +218,16 @@
     background: white;
     color: black;
     transition: 250ms;
+  }
+
+  .profilevist {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profilevist h2,
+  .profilevist a {
+    color: white;
   }
 }
